<resources>
    <string name="app_name">Visumed</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="nome">Nome</string>
    <string name="cpf">CPF</string>
    <string name="entrar">Entrar</string>
    <string name="cadastrar_se">Cadastrar-se</string>
    <string name="realizar_login">Realizar login</string>
    <string name="btn_cadastro">Cadastrar-se</string>
    <string name="posologia">Posologia</string>
    <string name="contra_indicacoes">Contra-indicações</string>
    <string name="indicacoes">Indicações</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="farmacias_parceiras">Ver farmácias parceiras</string>
    <string name="deslogar">Deslogar</string>
</resources>
