<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DrugDetailsActivity"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/label_name"
        android:fontFamily="Roboto"
        android:text="@string/nome"/>

        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/drug_name"
        android:fontFamily="Roboto"
        android:layout_marginBottom="13dp"/>


        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/label_indications"
        android:fontFamily="Roboto"
        android:text="@string/indicacoes" />


        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/drug_indications"
        android:fontFamily="Roboto"
        android:layout_marginBottom="13dp"/>


        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/label_counterIndications"
        android:fontFamily="Roboto"
        android:text="@string/contra_indicacoes"/>


        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/drug_counterIndications"
        android:fontFamily="Roboto"
        android:layout_marginBottom="13dp"/>


        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/label_dosage"
        android:fontFamily="Roboto"
        android:text="@string/posologia"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/drug_dosage"
        android:fontFamily="Roboto" />

    </ScrollView>

</LinearLayout>